<resources>
    <string name="app_name">EcoTech</string>
    <string name="invalidEmail">Format Email tidak sesuai</string>
    <string name="sign_in">SIGN IN</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_btn">SIGN IN</string>
    <string name="sign_up_page">SIGN UP</string>
    <string name="sign_up_btn">SIGN UP</string>
    <string name="atau_masuk_dengan">Atau masuk dengan</string>
    <string name="invalidPassword">Password minimal 8 karakter</string>
    <string name="register">Register</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="masuk">Masuk</string>
    <string name="ecotech_points">EcoTech Points</string>
    <string name="menunggu">Menunggu</string>
    <string name="diterima">Diterima</string>
    <string name="riwayat">Riwayat</string>
    <string name="tukar_kredit">Tukar Kredit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_camera">Dari Kamera</string>
    <string name="open_gallery">Dari Galeri</string>
    <string name="title_activity_list_location">ListLocationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sudahpunyaakun">Sudah punya akun?</string>
    <string name="buatakunsebagai">Buat Akun Sebagai</string>
    <string name="penyetor">Penyetor</string>
    <string name="kolektor">Kolektor</string>
    <string name="daftaronregister">Daftar</string>
    <string name="daftaronlogin">Daftar</string>
    <string name="login">LOGIN</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="email">Email</string>
    <string name="password_login">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="kolektor_welcome">Perusahaan atau perseorangan yang akan mengumpulkan e-waste dari penyetor</string>
    <string name="penyetor_welcome">Kamu dapat menyerahkan e-waste milikmu kepada kolektor</string>
    <string name="welcome_ecotech">Selamat datang di Ecotech!</string>
    <string name="welcome_pilihperan">Mau jadi penyetor e-waste atau sebagai kolektornya? Pilih peranmu sekarang!</string>
</resources>