<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/welcome_ecotech"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#4CACBC"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_pilihperan"
        android:textSize="13sp"
        android:textColor="#000000"
        android:layout_gravity="left" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_penyetor"
            android:layout_width="245dp"
            android:layout_height="245dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            android:background="@drawable/card_background"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/card_background"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_background"
                    android:src="@drawable/ic_penyetor_selector" /> <!-- replace with your image -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Penyetor e-waste"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="#4CACBC"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penyetor_welcome"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:textAlignment="center"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_kolektor"
            android:layout_width="245dp"
            android:layout_height="245dp"
            card_view:cardCornerRadius="8dp"
            android:layout_marginTop="36dp"
            android:layout_gravity="center"
            card_view:cardElevation="4dp"
            android:background="@drawable/card_background"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/card_background"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_kolektor_selector" /> <!-- replace with your image -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kolektor e-waste"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="#4CACBC"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kolektor_welcome"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="12sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>
